# crack

./: .gitignore  Cargo.toml  README.md
crates/deterministic/: Cargo.toml
crates/deterministic/src/: context.rs  file.rs  lib.rs  spawn.rs
deterministic_executor/: Cargo.toml
execution_explorer/: execution_explorer.complex_state.json  execution_explorer.py
experiments/: Cargo.toml
experiments/determined/: determined.py  thing.go
experiments/deterministic_executor/: README.md
experiments/deterministic_executor/complex_race/: Cargo.toml
experiments/deterministic_executor/complex_race/src/: main.rs
experiments/execution_explorer/: README.md
experiments/execution_explorer/src/: main.rs
experiments/file2/: yoooo.real_file
experiments/file2/src/: fake_file.rs  open_options.rs  real_file.rs
experiments/pulley/: Cargo.toml
experiments/pulley/src/: lib.rs
experiments/pulley/tests/: complex_race.rs
experiments/src/: crc16.rs  kernel.rs  net.rs  transport.rs
experiments/tracer/: Cargo.toml  trace.c
experiments/tracer/src/: lib.rs  ptrace.rs  sched.rs
file2/: Cargo.toml  some.file
file2/src/: lib.rs
file2/tests/: usage.rs
pulley/src/: lib.rs  tree_explorer.rs
pulley/tests/: complex_race.rs
src/: clock.rs  fsm.rs  kernel.rs  lib.rs  model.rs  sched.rs  transport.rs
src/sync/: mod.rs
src/thread/: mod.rs  spawn.rs
src/time/: mod.rs
tests/: test_lf.rs
tracer/: Cargo.toml
tracer/src/: sched.rs
