[package]
name = "crack"
description = "verify distributed and lock-free algorithms through symbolic execution"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
license = "Apache-2.0"
homepage = "https://github.com/spacejam/crack"
keywords = ["testing", "consensus", "formal-methods", "distributed-systems", "symbolic-execution"]
documentation = "https://docs.rs/crack"

[dependencies]
time = "0.1"
crdts = "1.2"
rustc-serialize = "0.3"
bincode = "0.6"
crossbeam = "0.2"
mio = "0.6.5"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = "0.4"
log = "0.3"
env_logger = "0.4"
uuid = { version = "0.4", features = ["v4", "serde"] }
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
error-chain = "0.9"

[dev-dependencies]
quickcheck = "0.2"
