[package]
name = "deterministic"
description = "deterministic building blocks for testable systems"
version = "0.0.3"
authors = ["Tyler Neely <t@jujit.su>"]
license = "Apache-2.0"
documentation = "https://docs.rs/deterministic/"

[dependencies]
rand = "0.4"
libc = "0.2"
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.0"
